--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,16 @@ button.show-details-btn {
   text-align: center; /* Center the text inside the alert */
   margin-top: 3%;
 }
+
+
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  gap: 20px;
+}
+
+@media (max-width: 768px) {
+  .charts-container {
+    grid-template-columns: 1fr; 
+  }
+}
